--- a/index.html
+++ b/index.html
@@ -59,6 +59,191 @@
   <button class="next">&#10095;</button>
 </section>
 
+<section class="features">
+  <div class="feature-box">
+    <i class="fas fa-gift"></i>
+    <h4>GIÁ TỐT – NHIỀU ƯU ĐÃI</h4>
+    <p>Ưu đãi với quà tặng hấp dẫn khi mua tour online</p>
+  </div>
+  <div class="feature-box">
+    <i class="fas fa-shopping-cart"></i>
+    <h4>THANH TOÁN AN TOÀN</h4>
+    <p>Được bảo mật bởi tổ chức quốc tế Global Sign</p>
+  </div>
+  <div class="feature-box">
+    <i class="fas fa-pencil-alt"></i>
+    <h4>TƯ VẤN 24/7</h4>
+    <p>Hỗ trợ tư vấn online tất cả các ngày trong tuần</p>
+  </div>
+  <div class="feature-box">
+    <i class="fas fa-star"></i>
+    <h4>THƯƠNG HIỆU UY TÍN</h4>
+    <p>Thương hiệu lữ hành hàng đầu Việt Nam</p>
+  </div>
+</section>
+
+
+<section class="best-sellers">
+  <h2 class="section-title">TOUR BÁN CHẠY NHẤT</h2>
+  <div class="tour-grid">
+    <div class="tour-item">
+      <img src="tour_1.png" alt="Tour Hạ Long">
+      <h4>Tour Hạ Long 1 Ngày Du Thuyền (Cao Cấp)</h4>
+      <p class="price">
+        <span class="old-price">1.200.000 đ</span>
+        <span class="new-price">700.000 đ</span>
+      </p>
+    </div>
+
+    <div class="tour-item">
+      <img src="tour_2.png" alt="Tour SaPa">
+      <h4>Tour SaPa 2 Ngày 1 Đêm Fansipan</h4>
+      <p class="price">
+        <span class="old-price">2.850.000 đ</span>
+        <span class="new-price">2.450.000 đ</span>
+      </p>
+    </div>
+
+    <div class="tour-item">
+      <img src="tour_3.png" alt="Tour Cát Bà">
+      <h4>Tour Cát Bà – Vịnh Lan Hạ 2 Ngày 1 Đêm</h4>
+      <p class="price">
+        <span class="old-price">3.000.000 đ</span>
+        <span class="new-price">1.850.000 đ</span>
+      </p>
+    </div>
+
+    <div class="tour-item">
+      <img src="tour_4.png" alt="Tour Tràng An">
+      <h4>Tour Bái Đính – Tràng An 1 Ngày – Ăn Trưa Buffet</h4>
+      <p class="price">
+        <span class="old-price">1.150.000 đ</span>
+        <span class="new-price">700.000 đ</span>
+      </p>
+    </div>
+  </div>
+</section>
+
+
+<section class="halong-tours">
+  <h2 class="section-title">TOUR HẠ LONG</h2>
+  <p class="section-subtitle">THOẢ SỨC TRẢI NGHIỆM – KHÁM PHÁ BẢN SẮC VIỆT</p>
+
+  <div class="tour-grid">
+    <div class="tour-item">
+        <a href="tour.html?id=halong1">
+      <img src="tour_1.png" alt="Hạ Long – Yên Tử">
+      </a>
+      <h4>Hạ Long - Yên Tử 3 Ngày 2 đêm</h4>
+      <p class="price">
+        <span class="old-price">4.550.000 đ</span>
+        <span class="new-price">4.050.000 đ</span>
+      </p>
+    </div>
+    <div class="tour-item">
+      <img src="tour_2.png" alt="Ninh Bình – Hạ Long 3N2Đ">
+      <h4>Ninh Bình – Hạ Long 3 Ngày 2 Đêm (1 Đêm Hotel Ninh Bình – 1 Đêm Hotel Hạ Long)</h4>
+      <p class="price">
+        <span class="old-price">3.450.000 đ</span>
+        <span class="new-price">2.950.000 đ</span>
+      </p>
+    </div>
+    <div class="tour-item">
+      <img src="tour_3.png" alt="Hạ Long 3N2Đ – Khách sạn">
+      <h4>Hạ Long 3 Ngày 2 Đêm (2 Đêm Ngủ Khách Sạn)</h4>
+      <p class="price">
+        <span class="old-price">3.450.000 đ</span>
+        <span class="new-price">2.650.000 đ</span>
+      </p>
+    </div>
+    <div class="tour-item">
+      <img src="tour_4.png" alt="Ninh Bình – Hạ Long 4N3Đ">
+      <h4>Ninh Bình - Hạ Long 4 Ngày 3 Đêm(1 Đêm Ninh Bình - 1 Đêm Hà Nội - 1 Đêm Hạ Long)</h4>
+      <p class="price">
+        <span class="old-price">4.450.000 đ</span>
+        <span class="new-price">4.150.000 đ</span>
+      </p>
+    </div>
+  </div>
+  <div class="tour-grid">
+    <div class="tour-item">
+      <img src="tour_1.png" alt="Ninh Bình – Sapa – Hạ Long 4N3Đ">
+      <h4>Ninh Bình – Hạ Long – Sapa 4 Ngày 3 Đêm</h4>
+      <p class="price">
+        <span class="old-price">5.450.000 đ</span>
+        <span class="new-price">3.950.000 đ</span>
+      </p>
+    </div>
+    <div class="tour-item">
+      <img src="tour_2.png" alt="Tour Cô Tô 3N2Đ">
+      <h4>Tour Cô Tô 3 Ngày 2 Đêm</h4>
+      <p class="price">
+        <span class="old-price">4.450.000 đ</span>
+        <span class="new-price">3.150.000 đ</span>
+      </p>
+    </div>
+    <div class="tour-item">
+      <img src="tour_3.png" alt="Hạ Long 1N – Du thuyền 6 sao">
+      <h4>Tour Du Lịch Hạ Long 1 Ngày – Du Thuyền 6 Sao – Ăn Trưa Buffet</h4>
+      <p class="price">
+        <span class="old-price">2.450.000 đ</span>
+        <span class="new-price">1.500.000 đ</span>
+      </p>
+    </div>
+    <div class="tour-item">
+      <img src="tour_4.png" alt="Hạ Long 1N 6 tiếng – Tàu 5 sao">
+      <h4>Tour Hạ Long 1 Ngày 6 Tiếng – Tàu 5 Sao – Ăn Trưa Buffet</h4>
+      <p class="price">
+        <span class="old-price">1.200.000 đ</span>
+        <span class="new-price">900.000 đ</span>
+      </p>
+    </div>
+  </div>
+</section>
+
+<section class="halong-tours">
+  <h2 class="section-title">TOUR NINH BÌNH</h2>
+
+  <div class="tour-grid">
+    <div class="tour-item">
+      <img src="tour_1.png" alt="Hạ Long – Yên Tử">
+      <h4>Minawa kênh gà 3 Ngày 2 đêm</h4>
+      <p class="price">
+        <span class="old-price">4.550.000 đ</span>
+        <span class="new-price">4.050.000 đ</span>
+      </p>
+    </div>
+
+    <div class="tour-item">
+      <img src="tour_2.png" alt="Ninh Bình – Hạ Long 3N2Đ">
+      <h4>Minawa kênh gà 4 Ngày 3 Đêm</h4>
+      <p class="price">
+        <span class="old-price">5.450.000 đ</span>
+        <span class="new-price">4.950.000 đ</span>
+      </p>
+    </div>
+
+    <div class="tour-item">
+      <img src="tour_3.png" alt="Hạ Long 3N2Đ – Khách sạn">
+      <h4>Tuyệt Tình Cốc - Tràng An - Hang Múa (2 Ngày 1 Đêm)</h4>
+      <p class="price">
+        <span class="old-price">2.450.000 đ</span>
+        <span class="new-price">2.050.000 đ</span>
+      </p>
+    </div>
+
+   <div class="tour-item">
+      <img src="tour_3.png" alt="Hạ Long 3N2Đ – Khách sạn">
+      <h4>Tuyệt Tình Cốc - Tràng An - Hang Múa (3 Ngày 2 Đêm)</h4>
+      <p class="price">
+        <span class="old-price">3.150.000 đ</span>
+        <span class="new-price">2.650.000 đ</span>
+      </p>
+    </div>
+  </div>
+  
+</section>
+
 
 <!-- Nút liên hệ cố định -->
 <div class="contact-fixed">
@@ -66,32 +251,6 @@
   <a href="tel:0976271701" class="call-btn">GỌI NGAY</a>
   <a href="https://www.facebook.com/people/Ezigo-Travel/61574435828601/" target="_blank" class="messenger-btn">MESSENGER</a>
 </div>
-
-
-
-  <section id="tour-kenhga" class="section">
-  <h2>Tour: Minawa Kênh Gà</h2>
-  <p>Tour nghỉ dưỡng kết hợp suối khoáng nóng tại Kênh Gà – Ninh Bình.</p>
-</section>
-
-<section id="tour-catba" class="section">
-  <h2>Tour: Flamingo Cát Bà</h2>
-  <p>Resort cao cấp ven biển với trải nghiệm thiên nhiên tuyệt vời tại Cát Bà.</p>
-</section>
-
-<section id="tour-tamcoc" class="section">
-  <h2>Tour: Tam Cốc Melody Homestay</h2>
-  <p>Trải nghiệm văn hóa địa phương giữa vùng núi đá vôi Tam Cốc.</p>
-</section>
-
-  <section id="khach-san" class="section hotel-section">
-    <h2><i class="fas fa-hotel"></i> Khách Sạn</h2>
-    <ul>
-      <li>Ninh Bình</li>
-      <li>Cát Bà</li>
-      <li>Ba Vì</li>
-    </ul>
-  </section>
 
 <section id="lien-he" class="section contact-section">
   <h2><i class="fas fa-phone"></i> Liên Hệ</h2>
