--- a/tour.html
+++ b/tour.html
@@ -5,7 +5,7 @@
   <title>Ezigo Travel - Chi tiết tour</title>
   <link rel="stylesheet" href="Style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-  <link rel="stylesheet" href="tour-detail.css">
+  <link rel="stylesheet" href="Tour.css">
 
 </head>
 
